test/custom/elaboration/bad/coreml_extern_with_bad_type.mle
let external (* typo in the assignment *) s : wtf = "0"
